@@ -1,3 +1,7 @@
+2011-11-02  Samuel Thibault  <samuel.thibault@ens-lyon.org>
+
+	* bits/ioctl-types.h (_IOT_sgttyb): Set number of chars to 4.
+
 2011-11-01  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* include/alloca.h (stackinfo_alloca_round): Define.
@@ -11,6 +15,9 @@
 	* nscd/Makefile (extra-objs): Make recursively expanded.
 
 2011-11-01  Ulrich Drepper  <drepper@gmail.com>
+
+	* sysdeps/x86_64/strcmp.S: Fix test for non-ASCII locales.
+	* sysdeps/x86_64/multiarch/strcmp-sse42.S: Likewise.
 
 	* posix/tst-rfc3484.c: Add missing __free_in6ai dummy function.
 	* posix/tst-rfc3484-2.c: Likewise.
